Drop settings relative to the defunct Concentric Mark Sweep Garbage Collector